--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <h1> <span class="web-title">Web</span>Studio</h1>
+             <a href="WebStudio"> <span class="web-title">Web</span>Studio</a>
         
             <ul class="nav-site">
                 <li>
@@ -97,12 +97,13 @@
             <p class="portfolio-text">Приложение</p> 
             </li>
         </ul>
-    <div class="footer">
-    <h3><span class="web-title"> Web</span>Studio </h3>
-    <p class="footer-adres"> г Киев пр-т Леси Украинки, 26 </p>
-    <p class="footer-amail"> info@example.com </p>
-    <p class="footer-amail"> +380991111111 </p>
-   </div>
-      </div>
+              <div class="footer">
+                  <a href="WebStudio"><span class="web-title"> Web</span><span class="web-titles">Studio <span></a>
+                  <p class= "footer-adres"> г Киев пр-т Леси Украинки, 26 </p>
+                  <address>
+                  <a class="footer-amail" href="maito:info@example.com"> info@example.com </a><br>
+                  <a class="footer-amail" href="tel:+380991111111" > +380991111111 </a>
+                </address>
+              </div>
    </body>
  </html>
